--- a/style.css
+++ b/style.css
@@ -1,9 +1,97 @@
 body{
+    height: 100vh;
     display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0px;
+    background-image: url("img/5.Fondo/Capas/5.cielo_1920-1080px.png");
+}
+
+.container-start{
+    position: absolute;
+    top: 0px;
+    right: 0px;
+    left: 0px;
+    z-index: 2;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
     align-items: center;
     flex-direction: column;
 }
 
+.menu-container{
+    font-size: small;
+    width: 720px;
+    height: 40px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 2px solid black;
+    border-radius: 5px;
+}
+
+.img-start{
+    width: 720px;
+    height: 480px;
+}
+
+.game-explain{
+    width: 20%;
+    height: 40px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-right: 1px solid black;
+    border-left: 1px solid black;
+}
+
+.img-fullscreen{
+    width: 20px;
+    cursor: pointer;
+}
+
+.game-button{
+    font-size: smaller;
+    border: 1px solid black;
+    background-color: rgba(211, 211, 211, 0.733);
+    width: 100px;
+    height: 25px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-decoration: unset;
+    color: black;
+}
+
+.game-button:hover{
+    background-color: lightgray;
+}
+
+.d-none{
+    display: none;
+}
+
 canvas{
     background-color: black;
+    display: block;
+}
+
+@media only screen and (max-width: 720px){
+    canvas{
+        width: 100%;
+    }
+}
+
+@media only screen and (max-height: 480px) {
+    canvas{
+        height: 100vh;
+    }
 }
