--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body {
     background-image: url("img/5.Fondo/Capas/5.cielo_1920-1080px.png");
 }
 
+h1{
+    position: absolute;
+    top: 40px;
+}
+
 .container-start {
     position: absolute;
     top: 0px;
@@ -84,13 +89,22 @@ canvas {
     display: block;
 }
 
-@media only screen and (max-width: 720px) {
+@media only screen and (max-width: 740px) {
+    body{
+        height: unset;
+    }
+    .container-start{
+        transform: rotate(-90deg);
+        top: 28%;
+        height: unset;
+    }
     canvas {
         width: 100%;
     }
-    .img-start {
-        width: 95%;
-        object-fit: contain;
+
+    .img-start{
+        width: 100%;
+        height: 100%;
     }
     .game-explain {
         flex-direction: column;
@@ -104,7 +118,7 @@ canvas {
     }
 
     .menu-container {
-        width: 95%;
+        width: 100%;
         height: 80px;
         z-index: 2;
     }
@@ -113,6 +127,28 @@ canvas {
         margin-bottom: 5px;
         width: 80%;
         height: 40px;
+    }
+}
+
+@media only screen and (max-width: 580px) {
+    .img-fullscreen{
+        display: none;
+    }
+
+    .container-start{
+        top: 30%;
+    }
+
+    canvas{
+        height: 100%;
+    }
+
+    .game-explain{
+        height: 60px;
+    }
+
+    .menu-container{
+        height: 60px;
     }
 }
 
